# vijam

./: Cargo.toml  flake.nix  lib.lua  sample.lua
src/: config.rs  input.rs  instrument.rs  main.rs  output.rs  render.rs
src/lua/: lib.lua
