[package]
name = "vijam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vizia = { git = "https://github.com/vizia/vizia/", branch = "main", default-features = false, features = ["winit", "x11", "wayland"] }
dasp = { version = "0.11.0", features = ["ring_buffer", "signal"] }
cpal = "0.15.3"
anyhow = "~1.0"
thread-priority = "0.16"
